--- a/portfolio.html
+++ b/portfolio.html
@@ -1,101 +1,395 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>My Portfolio</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Portfolio | KG Creative</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <!-- SEO -->
+    <meta
+      name="description"
+      content="View KG Creative’s portfolio: portraits, branding & graphic design, and social media work — crafted with a clean premium look."
+    />
 
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
-      <!-- Font Awesome Icons -->
-<link rel="stylesheet" 
-href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" 
-integrity="sha512-..." 
-crossorigin="anonymous" 
-referrerpolicy="no-referrer" />
-</head>
-<body>
-    <!-- Navbar -->
-<header class="navbar">
-  <div class="container">
-    <div class="logo">KG Creative</div>
+    <link rel="stylesheet" href="css/style.css" />
 
-    <nav>
-      <ul>
-        <li>
-          <a class="nav-link active" href="index.html">
-            <i class="fa-solid fa-house"></i> Home
-          </a>
-        </li>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&family=Fraunces:opsz,wght@9..144,600;9..144,700&display=swap"
+      rel="stylesheet"
+    />
 
-        <li>
-          <a class="nav-link" href="about.html">
-            <i class="fa-solid fa-user"></i> About
-          </a>
-        </li>
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-..."
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
 
-        <li class="dropdown">
-          <a class="nav-link" href="services.html">
-            <i class="fa-solid fa-briefcase"></i> Services ▾
-          </a>
-          <ul class="dropdown-menu">
+  <body id="top">
+  <!-- Page Loader -->
+<div id="pageLoader" class="page-loader" aria-label="Loading" role="status">
+  <div class="loader-inner">
+    <img src="images/logo.jpg" alt="KG Creative" class="loader-logo" />
+    <div class="loader-dots" aria-hidden="true">
+      <span></span><span></span><span></span>
+    </div>
+  </div>
+</div>
+    <!-- NAVBAR -->
+    <header class="navbar">
+      <div class="container">
+        <a href="index.html" class="logo" aria-label="KG Creative Home">
+          <img src="images/logo.jpg" alt="KG Creative Logo" />
+          <span>KG Creative</span>
+        </a>
+
+        <button class="nav-toggle" aria-label="Open menu" aria-expanded="false">
+          <i class="fa-solid fa-bars"></i>
+        </button>
+
+        <nav id="site-nav" aria-label="Primary navigation">
+          <ul>
             <li>
-              <a href="photography.html">
-                <i class="fa-solid fa-camera"></i> Photography
+              <a class="nav-link" href="index.html">
+                <i class="fa-solid fa-house"></i> Home
               </a>
             </li>
+
             <li>
-              <a href="design.html">
-                <i class="fa-solid fa-pen-nib"></i> Graphic Design
+              <a class="nav-link" href="about.html">
+                <i class="fa-solid fa-user"></i> About
               </a>
             </li>
+
+            <li class="dropdown">
+              <a class="nav-link" href="services.html">
+                <i class="fa-solid fa-briefcase"></i> Services ▾
+              </a>
+
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="photography.html">
+                    <i class="fa-solid fa-camera"></i> Photography
+                  </a>
+                </li>
+                <li>
+                  <a href="design.html">
+                    <i class="fa-solid fa-pen-nib"></i> Graphic Design
+                  </a>
+                </li>
+                <li>
+                  <a href="social.html">
+                    <i class="fa-solid fa-hashtag"></i> Social Media Management
+                  </a>
+                </li>
+              </ul>
+            </li>
+
             <li>
-              <a href="social.html">
-                <i class="fa-solid fa-hashtag"></i> Social Media Management
+              <a class="nav-link active" href="portfolio.html">
+                <i class="fa-solid fa-images"></i> Portfolio
+              </a>
+            </li>
+
+            <li>
+              <a class="nav-link" href="contact.html">
+                <i class="fa-solid fa-envelope"></i> Contact Us
+              </a>
+            </li>
+
+            <li>
+              <a href="book.html" class="btn-primary">
+                <i class="fa-solid fa-calendar-check"></i> Book Now
               </a>
             </li>
           </ul>
-        </li>
+        </nav>
+      </div>
+    </header>
 
-        <li>
-          <a class="nav-link" href="portfolio.html">
-            <i class="fa-solid fa-images"></i> Portfolio
-          </a>
-        </li>
-
-        <li>
-          <a class="nav-link" href="contact.html">
-            <i class="fa-solid fa-envelope"></i> Contact Us
-          </a>
-        </li>
-
-        <li>
-          <a href="book.html" class="btn-primary">
-            <i class="fa-solid fa-calendar-check"></i> Book Now
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </div>
-</header>
-    <section class="page-hero">
-    <div class="container">
+    <!-- Page Hero (KEEP: Portfolio part) -->
+    <section class="page-hero reveal">
+      <div class="container">
         <h1>Portfolio</h1>
         <p class="page-subtitle">
-            Have a look at my broad range of work
+          A curated selection of portraits, branding work, and social media visuals —
+          crafted with a clean, premium look.
         </p>
+      </div>
+    </section>
+
+    <!-- PORTRAITS SECTION -->
+    <section class="portfolio-section container reveal" id="portraits">
+      <h2 class="section-title">Portraits</h2>
+      <p class="section-subtitle muted">
+        Tap any image to view full-screen, then use arrows (or swipe) to browse the full set.
+      </p>
+
+      <div class="media-grid">
+        <a class="media-item" href="images/potrait1.jpg">
+          <img class="js-lightbox" data-gallery="portraits" src="images/potrait1.jpg" alt="Portrait 1" loading="lazy" />
+        </a>
+        <a class="media-item" href="images/potrait2.jpg">
+          <img class="js-lightbox" data-gallery="portraits" src="images/potrait2.jpg" alt="Portrait 2" loading="lazy" />
+        </a>
+        <a class="media-item" href="images/potrait3.jpg">
+          <img class="js-lightbox" data-gallery="portraits" src="images/potrait3.jpg" alt="Portrait 3" loading="lazy" />
+        </a>
+        <a class="media-item" href="images/potrait4.jpg">
+          <img class="js-lightbox" data-gallery="portraits" src="images/potrait4.jpg" alt="Portrait 4" loading="lazy" />
+        </a>
+        <a class="media-item" href="images/potrait5.jpg">
+          <img class="js-lightbox" data-gallery="portraits" src="images/potrait5.jpg" alt="Portrait 5" loading="lazy" />
+        </a>
+        <a class="media-item" href="images/potrait6.jpg">
+          <img class="js-lightbox" data-gallery="portraits" src="images/potrait6.jpg" alt="Portrait 6" loading="lazy" />
+        </a>
+        <a class="media-item" href="images/potrait7.jpg">
+          <img class="js-lightbox" data-gallery="portraits" src="images/potrait7.jpg" alt="Portrait 7" loading="lazy" />
+        </a>
+        <a class="media-item" href="images/potrait8.jpg">
+          <img class="js-lightbox" data-gallery="portraits" src="images/potrait8.jpg" alt="Portrait 8" loading="lazy" />
+        </a>
+        <a class="media-item" href="images/potrait9.jpg">
+          <img class="js-lightbox" data-gallery="portraits" src="images/potrait9.jpg" alt="Portrait 9" loading="lazy" />
+        </a>
+        <a class="media-item" href="images/potrait10.jpg">
+          <img class="js-lightbox" data-gallery="portraits" src="images/potrait10.jpg" alt="Portrait 10" loading="lazy" />
+        </a>
+        <a class="media-item" href="images/potrait11.jpg">
+          <img class="js-lightbox" data-gallery="portraits" src="images/potrait11.jpg" alt="Portrait 11" loading="lazy" />
+        </a>
+        <a class="media-item" href="images/potrait12.jpg">
+          <img class="js-lightbox" data-gallery="portraits" src="images/potrait12.jpg" alt="Portrait 12" loading="lazy" />
+        </a>
+        <a class="media-item" href="images/potrait13.jpg">
+          <img class="js-lightbox" data-gallery="portraits" src="images/potrait13.jpg" alt="Portrait 13" loading="lazy" />
+        </a>
+        <a class="media-item" href="images/potrait14.jpg">
+          <img class="js-lightbox" data-gallery="portraits" src="images/potrait14.jpg" alt="Portrait 14" loading="lazy" />
+        </a>
+        <a class="media-item" href="images/potrait15.jpg">
+          <img class="js-lightbox" data-gallery="portraits" src="images/potrait15.jpg" alt="Portrait 15" loading="lazy" />
+        </a>
+      </div>
+
+      <div class="center">
+        <a href="book.html" class="btn-primary"><i class="fa-solid fa-calendar-check"></i> Book a Session</a>
+      </div>
+    </section>
+
+    <!-- BRANDING / GRAPHIC DESIGN SECTION (placeholder) -->
+    <section class="portfolio-section reveal" id="branding">
+      <div class="container">
+        <h2 class="section-title">Graphic Design & Branding</h2>
+        <p class="section-subtitle muted">
+          Logos, posters, brand identity systems, and campaign visuals — coming soon.
+        </p>
+
+        <div class="placeholder-grid">
+          <div class="placeholder-card">
+            <i class="fa-solid fa-pen-nib"></i>
+            <h3>Logos</h3>
+            <p>Add your logo designs here.</p>
+          </div>
+          <div class="placeholder-card">
+            <i class="fa-solid fa-layer-group"></i>
+            <h3>Brand Identity</h3>
+            <p>Color palettes, typography, and brand kits.</p>
+          </div>
+          <div class="placeholder-card">
+            <i class="fa-solid fa-square-poll-vertical"></i>
+            <h3>Posters & Flyers</h3>
+            <p>Event posters and promo creatives.</p>
+          </div>
+          <div class="placeholder-card">
+            <i class="fa-solid fa-box"></i>
+            <h3>Packaging</h3>
+            <p>Labels, boxes, and product packaging.</p>
+          </div>
+        </div>
+
+        <div class="center">
+          <a href="design.html" class="btn-secondary"><i class="fa-solid fa-pen-nib"></i> View Design Services</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- SOCIAL MEDIA SECTION (placeholder) -->
+    <section class="portfolio-section container reveal" id="social-work">
+      <h2 class="section-title">Social Media Work</h2>
+      <p class="section-subtitle muted">
+        Content planning, templates, campaign creatives, and growth visuals — add your work here.
+      </p>
+
+      <div class="placeholder-grid">
+        <div class="placeholder-card">
+          <i class="fa-solid fa-hashtag"></i>
+          <h3>Templates</h3>
+          <p>IG posts, reels covers, story layouts.</p>
+        </div>
+        <div class="placeholder-card">
+          <i class="fa-solid fa-bullhorn"></i>
+          <h3>Campaigns</h3>
+          <p>Launch creatives and promo series.</p>
+        </div>
+        <div class="placeholder-card">
+          <i class="fa-solid fa-chart-line"></i>
+          <h3>Results</h3>
+          <p>Before/after visuals & analytics snapshots.</p>
+        </div>
+        <div class="placeholder-card">
+          <i class="fa-solid fa-clapperboard"></i>
+          <h3>Content</h3>
+          <p>Short-form design + content direction.</p>
+        </div>
+      </div>
+
+      <div class="center">
+        <a href="social.html" class="btn-secondary"><i class="fa-solid fa-hashtag"></i> View Social Services</a>
+      </div>
+    </section>
+
+    <!-- Lightbox (re-used across pages) -->
+    <div class="lightbox" id="lightbox" aria-hidden="true">
+      <button class="lightbox-close" id="lbClose" aria-label="Close">
+        <i class="fa-solid fa-xmark"></i>
+      </button>
+
+      <button class="lightbox-nav prev" id="lbPrev" aria-label="Previous">
+        <i class="fa-solid fa-chevron-left"></i>
+      </button>
+
+      <figure class="lightbox-figure">
+        <img id="lbImg" alt="" />
+      </figure>
+
+      <button class="lightbox-nav next" id="lbNext" aria-label="Next">
+        <i class="fa-solid fa-chevron-right"></i>
+      </button>
     </div>
-</section>
 
+    <!-- Footer (upgraded) -->
+    <footer class="site-footer reveal">
+      <div class="container footer-grid">
+        <div class="footer-col">
+          <p class="footer-brand">KG Creative</p>
+          <p class="footer-muted">
+            Premium photography & design studio based in Nairobi. Clean visuals, authentic moments,
+            and brand-ready delivery.
+          </p>
 
-<section class="service-cta container">
-    <a href="book.html" class="btn-primary">Book Now</a>
-</section>
+          <div class="footer-badges" aria-label="Studio highlights">
+            <span class="footer-badge">Fast turnaround</span>
+            <span class="footer-badge">Premium edits</span>
+            <span class="footer-badge">Nairobi-based</span>
+            <span class="footer-badge">Photo + Design</span>
+          </div>
 
-<footer>
-    <p>© 2026 KG Creative | Nairobi, Kenya</p>
-</footer>
-</body>
+          <div class="footer-social" style="margin-top:16px;">
+            <a class="social-link" href="https://www.instagram.com/itskgcreative?igsh=dWNmcDJubTlpMTM2" target="_blank" rel="noopener" aria-label="Instagram">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a class="social-link" href="https://www.tiktok.com/@itskgcreative?_r=1&_t=ZS-944RplkvNLN" target="_blank" rel="noopener" aria-label="TikTok">
+              <i class="fa-brands fa-tiktok"></i>
+            </a>
+            <a class="social-link" href="https://www.facebook.com/share/1CFgZYMUWt/" target="_blank" rel="noopener" aria-label="Facebook">
+              <i class="fa-brands fa-facebook-f"></i>
+            </a>
+            <a class="social-link" href="mailto:itskgcreative@gmail.com" aria-label="Email">
+              <i class="fa-solid fa-envelope"></i>
+            </a>
+          </div>
+        </div>
+
+        <div class="footer-col">
+          <p class="footer-title">Quick Links</p>
+          <ul class="footer-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="book.html">Book a Session</a></li>
+            <li><a href="index.html#reviews">Reviews</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-col">
+          <p class="footer-title">Services</p>
+          <ul class="footer-links">
+            <li><a href="photography.html">Photography</a></li>
+            <li><a href="design.html">Graphic Design</a></li>
+            <li><a href="social.html">Social Media Management</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-col">
+          <p class="footer-title">Contact</p>
+          <ul class="footer-contact">
+            <li>
+              <i class="fa-solid fa-location-dot"></i>
+              <span>Nairobi, Kenya</span>
+            </li>
+            <li>
+              <i class="fa-solid fa-phone"></i>
+              <a href="tel:+254713482813">+254 713 482 813</a>
+            </li>
+            <li>
+              <i class="fa-solid fa-envelope"></i>
+              <a href="mailto:itskgcreative@gmail.com">itskgcreative@gmail.com</a>
+            </li>
+            <li>
+              <i class="fa-brands fa-whatsapp"></i>
+              <a href="https://wa.me/254713482813" target="_blank" rel="noopener">WhatsApp</a>
+            </li>
+          </ul>
+
+          <a class="footer-cta" href="book.html">
+            <i class="fa-solid fa-calendar-check"></i> Book Now
+          </a>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <div class="container footer-bottom-inner">
+          <p>© 2026 KG Creative • Nairobi, Kenya</p>
+          <a class="to-top" href="#top" aria-label="Back to top">
+            Back to top <i class="fa-solid fa-arrow-up"></i>
+          </a>
+        </div>
+      </div>
+    </footer>
+
+    <!-- Floating Social (replace # with your real links) -->
+    <div class="social-float" aria-label="Social links">
+      <a class="social-btn" href="#" aria-label="WhatsApp" title="WhatsApp">
+        <i class="fa-brands fa-whatsapp"></i>
+      </a>
+      <a class="social-btn" href="#" aria-label="Instagram" title="Instagram">
+        <i class="fa-brands fa-instagram"></i>
+      </a>
+      <a class="social-btn" href="#" aria-label="TikTok" title="TikTok">
+        <i class="fa-brands fa-tiktok"></i>
+      </a>
+      <a class="social-btn" href="#" aria-label="Facebook" title="Facebook">
+        <i class="fa-brands fa-facebook-f"></i>
+      </a>
+    </div>
+
+    <script src="js/main.js" defer></script>
+    <script>
+      // footer year (tiny, safe)
+      document.addEventListener("DOMContentLoaded", () => {
+        const y = document.getElementById("year");
+        if (y) y.textContent = String(new Date().getFullYear());
+      });
+    </script>
+  </body>
+</html>
